@@ -1,4 +1,4 @@
-Copyright (c) 2009-2010, Jeremy Oden, Thibault Manlay.
+Copyright (c) 2009-2021, Jeremy Oden.
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without 
